Shortlink-projects/Shortlink-AWS-Terraform/gitops/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shortlink
  labels:
    name: shortlink
    istio-injection: enabled
